Undo: Changes to make behaviour on mobile safari better caused issues with everything else

--- a/src/octoprint/static/css/bootstrap-modal.css
+++ b/src/octoprint/static/css/bootstrap-modal.css
@@ -9,7 +9,6 @@
 
 .modal-open {
 	overflow: hidden;
-	position: fixed;
 }
 
 
